--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-expo": "^9.2.2",
     "expo": "^47.0.13",
     "expo-app-loading": "^2.1.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -21,9 +22,9 @@
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-svg": "^13.8.0",
     "react-native-tailwindcss": "^1.1.11",
-    "react-native-web": "~0.18.9",
-    "expo-splash-screen": "~0.17.5"
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
