--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.4",
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.10",
+    "@react-navigation/stack": "^6.3.16",
     "babel-preset-expo": "^9.2.2",
     "expo": "^47.0.13",
     "expo-app-loading": "^2.1.1",
